themes/startwords/assets/scss/article/_single.scss
/* single article page styles */

body.article {

    article {
        margin-top: rem(60px);
        margin-bottom: rem(100px);

        @media (min-width: $breakpoint-s) {
            margin-bottom: 0;
        }

        // header (summary)
        header {
            margin-bottom: rem(30px);
            @media (min-width: $breakpoint-s) { margin-bottom: rem(80px); }
            @media (min-width: $breakpoint-m) { margin-bottom: rem(60px); }
            @include constrain-text;

            p {
                margin: 0;
            }

            .number {
                a, a:visited {
                    color: $dark-grey;
                    text-decoration: none;
                }
            }

            .theme {
                font-size: rem(18px);
                font-weight: 900;
                a, a:visited {
                    text-decoration: none;
                }
            }

            .doi-group {
                margin-top: rem(10px);
                margin-bottom: rem(5px);
                p {
                    margin: 0;
                    padding: 0;
                }
            }
            .doi { display: inline; clear: both; }

            // sequential author display with commas
            .authors {
                font-weight: 400;
                li, address { display: inline; }
                li::after {
                    content: ', ';
                    padding-right: 0.5em;
                }
                li:last-child::after { content: ''; }

                // make author links inline-blocks to improve
                // tap target accessibility
                a {
                    display: inline-block;
                    color: $dark-grey;
                    width: 48px;
                    margin-left: -30px;
                    text-align: right;
                    padding-left: rem(4px);
                    font-size: rem(16px);  /* increase font size slightly for phosphor link */

                    // decrease size for print
                    @media print {
                        font-size: 12px;
                    }
                }
            }

            .formats { font-weight: 400; margin-top: .5rem; }

            .formats a { margin-right: rem(5px); }
        }
    }

}

// common styles for articles and content pages
body.article article, body.page article {

        // all textual elements that shouldn't be more than 75char wide
        p, ol, ul, blockquote, hr, h2, h3, h4, h5, h6 { @include constrain-text; }

        // body text
        p {
            // disabling overflow hidden because
            // it makes paragraphs NOT wrap around pull quotes
            // overflow: hidden;    // underlines shouldn't go outside margins
            padding-bottom: 3px; // space for underlines at end of paragraph
            margin-top: rem(17px);
            margin-bottom: rem(17px);
            font-weight: 300;
            line-height: rem(27px);
            @media (min-width: $breakpoint-m) { line-height: rem(30px); }
        }

        // lists
        ol, ul {
            font-weight: 300;
            line-height: rem(27px);
        }

        // tables
        table {
            font-family: $font-sans;
            font-size: rem(16px);
            margin: auto;
            // align cells left by default
            // unless specified otherwise in markdown with |:----| beneath column header
            text-align: left;
            // tabular data headers
            th {
                font-weight: 600;
                padding: 0 0.5rem 0.5rem 0;
                }
            // tabular data cells
            td {
                font-weight: 400;
                padding: 0.25rem 0.5rem 0.25rem 0;
            }
            caption {
                caption-side: bottom;
                font-family: $font-serif;
                font-style: italic;
                font-weight: 300;
                line-height: 30px;
                padding-top: 1.5rem;
                padding-bottom: 1rem;
                width: 100%;
                text-align: left;
                margin: 0;
            }
        }

        // block quotes
        blockquote {
            margin-top: rem(30px);
            margin-bottom: rem(30px);

            p {
                margin: 0;
                font-style: italic;
                font-weight: 300;
            }

            cite {
                display: block;
                margin-top: rem(5px);
                font-style: normal;
                font-weight: 300;

                &::before {
                    content: ' – '
                }
            }
        }

        // links
        a {
            @include highlight-focus;
            &.footnote-ref { outline-offset: rem(-10px); }
        }

        // flourished section break
        hr {
            background-image: url("/img/logos/startwords.svg");
            margin-top: rem(22px);
            margin-bottom: rem(22px);
            height: rem(22px);
            border: 0;
            background-repeat: no-repeat;
            background-size: contain;
            background-position: center;
        }

        // pull quotes
        blockquote.pull {
            margin: 0;
            padding: rem(25px) rem(65px);
            display: inline-block;
            box-sizing: border-box;
            width: 100%;
            position: relative;
            font-size: rem(22px);
            font-family: $font-sans;
            font-weight: 400;
            font-style: italic;
            color: $purple;
            line-height: rem(30px);
            z-index: 1;  /* display over link underlines */

            @media (min-width: $breakpoint-s) { width: 50%; }
            @media (min-width: $breakpoint-m) {
                font-size: rem(24px);
                line-height: rem(32px);
            }

            &.left {
                float: left;
                margin-right: rem(10px);
            }

            &.right {
                float: right;
                margin-left: rem(10px);
            }

            background-image: url('/img/pullquote-start.svg'), url('/img/pullquote-stop.svg');
            background-position: rem(10px) rem(10px), right rem(10px) bottom rem(10px);
            background-repeat: no-repeat, no-repeat;
        }

    // embedded content
    .sketchfab-embed-wrapper {
        margin: rem(30px) 0;

        iframe {
            width: 100%;
            height: $frame-height;
        }

        .preview {
            display: none;
            max-width: 100%;
        }
    }

    .deepzoom {
        width: 100%;
    }

    .video-embed-wrapper {
        .preview {
            display: none;
            max-width: 100%;
        }

        figure {
            text-align: center;
        }
    }

    .deepzoom-preview {
        display: none;
        max-width: 100%;
    }

    iframe, .kaltura {
        width: 100%;
        height: rem(480px);
        max-width: 100vw;
        overflow: hidden;
        border: 0;
        margin: rem(30px) auto;
    }

    /* kaltura video embed */
    .kWidgetIframeContainer {
        margin: rem(30px) auto;
        height: rem(240px);
        @media (min-width: $breakpoint-s) { height: rem(440px); }
    }
}

details.code {
    margin-bottom: rem(22px);
    background-color: #272822;  // match code background color
    summary {
        // match background when closed
        background-color: $off-white;
        .interlude & {
            background-color: $purple;
        }
        text-align: center;
        font-style: italic;
    }

    &[open] {
        // full width on mobile
        margin-left: -10px;
        padding-left: 10px;
        @media (min-width: $breakpoint-s) {
            margin-left: auto;
            padding-left: auto;
        }

        summary {
        // match code background when open
        background-color: #272822;
        }
    }
}

/* fallback content included to be shown in TXT version only */
.txt-only {
    display: none;
}
/* hide assets only used for pdf */
.print-only, .print-only-preview {
    display: none;
}


.full-width {
    width: 100vw;
    margin-left: (-$gutter);
    grid-column: full;
}

